--- a/index.html
+++ b/index.html
@@ -32,36 +32,64 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="%E4%B8%80%E7%AE%80%E4%BB%8B" class="anchor" href="#%E4%B8%80%E7%AE%80%E4%BB%8B"><span class="octicon octicon-link"></span></a>一、简介</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>该工程是SuperMap推出的一个全景制作方案，利用第三方开源软件SaladoPlayer与iClient产品结合为用户提供方便可用的全景制作方案。</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>全景方案主页地址：<a href="http://panotest.aliapp.com">http://panotest.aliapp.com</a></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>iClient For JavaScript 全景范例: <a href="http://panotest.aliapp.com/JSDemo/index.html">http://panotest.aliapp.com/JSDemo/index.html</a></p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>iClient For Flash 全景范例: <a href="http://panotest.aliapp.com/FlexDemo/FlexWithSaladoPlayer.html">http://panotest.aliapp.com/FlexDemo/FlexWithSaladoPlayer.html</a></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>iClient For Flash3D全景范例: <a href="http://panotest.aliapp.com/Flash3DDemo/flash3DViewer.html">http://panotest.aliapp.com/Flash3DDemo/flash3DViewer.html</a></p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>SaladoPlayer结合JS地图插件: <a href="http://panotest.aliapp.com/SaladoPlayerJSMapPlugin/index.html">http://panotest.aliapp.com/SaladoPlayerJSMapPlugin/index.html</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>iClient For JavaScript综合范例: <a href="http://panotest.aliapp.com/JSComDemo/index.html">http://panotest.aliapp.com/JSComDemo/index.html</a></p>
+
+<p>iClient For Flash3D综合范例: <a href="http://panotest.aliapp.com/Flash3DComDemo/flash3DViewer.html">http://panotest.aliapp.com/Flash3DComDemo/flash3DViewer.html</a></p>
 
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="%E4%BA%8C%E6%80%BB%E7%BB%93" class="anchor" href="#%E4%BA%8C%E6%80%BB%E7%BB%93"><span class="octicon octicon-link"></span></a>二、总结</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>总的来看，我们需要下面几步：</p>
+
+<ol>
+<li><p>创建2:1全景图片</p></li>
+<li><p>用SaladoConverter切割图片</p></li>
+<li><p>将切割好的图片资源文件夹放入scenes文件夹下</p></li>
+<li><p>运行"批量生成SaladoPlayer配置文件工具"，按照我们的要求进行设置并生成</p></li>
+<li><p>运行范例程序展示</p></li>
+<li><p>根据需要扩展和开发范例</p></li>
+</ol><h3>
+<a name="%E4%B8%89%E6%B3%A8%E6%84%8F" class="anchor" href="#%E4%B8%89%E6%B3%A8%E6%84%8F"><span class="octicon octicon-link"></span></a>三、注意</h3>
+
+<p>SuperMap for JavaScript和 SuperMap for Flash3D、SuperMap for Flash提供了完整的制作方案， 但是需要注意以下几点：</p>
+
+<p>1.这里使用的全景制作软件全部都是免费开源的，其目的是为了节省开发人员的成本，以便让刚开始接触全景的人不至于承担太大的经济压力。</p>
+
+<p>2.在数据制作部分，通过开源软件拼接好的全景图有一个要求，就是长与宽的比为2:1，这是因为垂直180°，水平360°的原因造成的，如果不是这个比例SaladoConverter是无法进行图片的切割的。</p>
+
+<p>3.由于整个制作方案中使用的都是开源软件，所以用户是可以获取到源代码的，用户可以通过修改源代码来达到项目要求。</p>
+
+<p>4.另外需要说明的是，开源软件可以免费用，但是由于其中大部分开源软件是遵照GPL协议，所以用来做项目开发是没有问题的，但如果想要用其软件作为二次开发的基础来进行商业运作则你开发出来的产品同样要开源并遵照GPL协议。</p>
+
+<p>5.另外除了使用开源软件进行图像的拼接以外，还可以使用PTGui这个拼图工具进行拼接，该工具操作更加简单与高效。</p>
+
+<p>6.在修图方面，如果你对PhotoShop熟悉一些的话，使用PhotoShop能够让你的全景图更上一个档次。</p>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a name="%E5%9B%9B%E8%AE%B8%E5%8F%AF%E6%8E%88%E6%9D%83" class="anchor" href="#%E5%9B%9B%E8%AE%B8%E5%8F%AF%E6%8E%88%E6%9D%83"><span class="octicon octicon-link"></span></a>四、许可授权</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>详见“LICENSE.txt”。</p>
+
+<h3>
+<a name="%E4%BA%94%E6%95%88%E6%9E%9C%E5%B1%95%E7%A4%BA" class="anchor" href="#%E4%BA%94%E6%95%88%E6%9E%9C%E5%B1%95%E7%A4%BA"><span class="octicon octicon-link"></span></a>五、效果展示</h3>
+
+<p>下面是具体的效果</p>
+
+<p><img src="images/javascriptDemoImage.png" alt="original_THmC_4b6f000174941190"></p>
       </section>
     </div>
 
