--- a/index.html
+++ b/index.html
@@ -567,10 +567,10 @@ ul, ol {
         <h2>数据制作</h2>
 
         <p class="contant">全景图片的制作流程：拍摄原始照片， 图片拼接，修图，
-            具体方法可以参考<a href="http://www.webtudou.com/?p=1088" target="_blank">
+            具体方法可以参考<a href="https://github.com/SuperMap/Panorama_Project/blob/master/01.%E5%BC%80%E6%BA%90%E6%96%B9%E5%BC%8F%E5%88%9B%E5%BB%BA%E5%85%A8%E6%99%AF.docx" target="_blank">
                 《使用开源工具创建全景》</a>，这篇文章介绍了使用开源工具创建全景的详细步骤</p>
 
-        <p class="mybtnCont"><a class="btn customBtn1" href="http://www.webtudou.com/?p=1088" target="_blank">查看文章
+        <p class="mybtnCont"><a class="btn customBtn1" href="https://github.com/SuperMap/Panorama_Project/blob/master/01.%E5%BC%80%E6%BA%90%E6%96%B9%E5%BC%8F%E5%88%9B%E5%BB%BA%E5%85%A8%E6%99%AF.docx" target="_blank">查看文章
             »</a></p>
     </div>
     <!-- /.span4 -->
@@ -583,10 +583,10 @@ ul, ol {
 
         <p class="contant">场景展示使用SaladoPlayer,
             其场景的展示与配置文件密切相关，范例提供了SaladoPlayer配置
-            文件批量生成工具，该工具的使用请参考<a href="http://www.webtudou.com/?p=1270" target="_blank">
+            文件批量生成工具，该工具的使用请参考<a href="https://github.com/SuperMap/Panorama_Project/blob/master/02.%E6%89%B9%E9%87%8F%E7%94%9F%E6%88%90SaladoPlayer%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6%E5%B7%A5%E5%85%B7%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.docx" target="_blank">
             《配置文件工具使用说明》</a></p>
 
-        <p class="mybtnCont"><a class="btn customBtn1" href="http://www.webtudou.com/?p=1270" target="_blank">查看文章
+        <p class="mybtnCont"><a class="btn customBtn1" href="https://github.com/SuperMap/Panorama_Project/blob/master/02.%E6%89%B9%E9%87%8F%E7%94%9F%E6%88%90SaladoPlayer%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6%E5%B7%A5%E5%85%B7%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.docx" target="_blank">查看文章
             »</a></p>
     </div>
     <!-- /.span4 -->
